# rust-istanbul-sourcemap

./: .gitignore  .goreleaser.yml  Cargo.toml  GO_README.md  IMMEDIATE_FIX.md  INSTALL_GUIDE.md  Makefile  PUBLISHING.md  QUICKSTART.md  README.md  SOLUTION.md  SUMMARY.md  USAGE.md  download_lib.go  go.mod  install.bat  install.go  install.sh  istanbul_sourcemap.go  istanbul_sourcemap_test.go  lib
.github/workflows/: build.yml
benches/: benchmark.rs
cmd/cli/: main.go
examples/go/: README.md  main.go
pkg/arch/: PKGBUILD
pkg/homebrew/: istanbul-sourcemap-go.rb
scripts/: final-check.sh  fix-cgo-paths.sh  fix-library-issue.sh  publish.sh  quick-library-fix.sh  setup-repo.sh  test-actions.sh  test-final.sh  test-go-get.sh  test-install-flow.sh  verify-installation.sh  verify.sh
src/: ffi.rs  lib.rs  main.rs  sourcemap.rs  transformer.rs
tests/: integration_tests.rs
