[package]
name = "istanbul-sourcemap"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
sourcemap = "8.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false