[package]
name = "istanbul-sourcemap"
version = "0.1.0"
edition = "2021"

[lib]
name = "istanbul_sourcemap"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "istanbul-sourcemap"
path = "src/bin/main.rs"

[[bin]]
name = "example"
path = "src/bin/example.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
sourcemap = "8.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false